==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.

Breaking Changes
================

Changes
=======

Fixes
=====

- Fixed an issue that could cause ``INSERT INTO`` statements into partitioned
  tables to not work correctly. This only occurred if a ``query`` instead of
  the ``VALUES`` clause was used.

- Fixed the evaluation of JavaScript user defined functions that caused CrateDB
  to crash because of an unhandled assertion when providing the UDF with
  EcmaScript 6 arrow function syntax (``var f = (x) => x;``).

- Fixed an issue where batch operations executed using the postgres protocol 
  could've returned 0 as row count, even though the actual row count was 
  different.

- Fixed a bug which could cause job entries in `sys.jobs` not being removed
  when a connection error occurred while transferring the results of the job
  execution.

- Fixed an issue that caused incorrect results for queries with joins on more
  than 2 tables with implicit join conditions using the ``ON`` clause and
  ``LIMIT`` is applied. E.g. ::

     SELECT * from t1
     INNER JOIN t2 on t1.id = t2.id
     INNER JOIN t3 on t3.id = t2.id
     LIMIT 100

- Fixed an issue that could cause a ``ALTER TABLE`` statement to fail with an
  exception on partitioned tables created with CrateDB < 1.2.

- Enforce validation of column constraints for ``INSERT`` statements with a
  subquery as source and in combination with ``ON DUPLICATE KEY UPDATE``.

- Fixed an issue that caused an error to be thrown when using ``GROUP BY`` or
  ``DISTINCT`` on a column of type ``IP`` in case there are rows with null
  value for that column.